apps/uptime-kuma/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - image: louislam/uptime-kuma:2.2.1
        name: uptime-kuma
        ports:
          - containerPort: 3001
        volumeMounts:
          - name: data
            mountPath: /app/data
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: uptime-kuma-data
