apps/uptime-kuma/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1 
kind: HTTPRoute
metadata:
  name: uptime-kuma-route
  namespace: uptime-kuma
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
  hostnames:
    - status.daltonbuilds.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: uptime-kuma
          port: 80
